优化角色管理
